--- a/styles.css
+++ b/styles.css
@@ -158,38 +158,49 @@ ul {
 
 aside {
   width: 210px;
-  margin: 0 10px 0 30px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  margin-left: 30px;
 }
 
-aside h5 {
+.aside-articles {
+  width: 100%;
+  position: relative;
+  top: 1000px;
+}
+
+.aside-title {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 10px;
   margin-bottom: 10px;
 }
 
-.picks {
-  border-top: 1px solid #eee;
-  padding-top: 10px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 100px);
-  gap: 10px;
+.picks article {
+  width: 100%;
+  height: 75px;
+  margin-bottom: 15px;
 }
 
-.grid-item {
-  width: 100px;
+.picks a {
+  display: flex;
+  position: absolute;
+  text-decoration: none;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-.grid-item a {
+.picks a h3 {
   font-size: 14px;
-  line-height: 17px;
-  color: #333333;
-  font-family: georgia, "times new roman", times, serif;
+  font-weight: lighter;
+  max-width: 125px;
+  margin-left: 10px;
 }
 
-.grid-item img {
-  height: 100%;
+.img-div {
+  min-width: 75px;
+  min-height: 75px;
+}
+
+.img-div img {
+  width: 75px;
+  height: 75px;
 }
 
 /* -------------------- THE SECOND MAIN ----------------------- */
