--- a/styles.css
+++ b/styles.css
@@ -281,6 +281,34 @@ aside {
   font-size: 13px;
 }
 
+.video-container {
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  position: relative;
+}
+
+.video-container iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.bottom-of-article {
+  font-size: 12px;
+  line-height: 16px;
+  color: rgb(102, 102, 102);
+}
+
+.bottom-of-article a {
+  color: rgb(102, 102, 102);
+}
+
+.bottom-button button {
+  width: 330px;
+}
+/* ------------------------ THIS SECTION IS FOR THE SECOND PICTURE ---------------- */
+
 @media only screen and (min-width: 1400px) {
   .response {
     width: 120%;
