Fix Validation Errors

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ header {
   position: sticky;
   top: 0;
   background-color: #fff;
+  z-index: 30;
 }
 
 .navbar {
@@ -95,7 +96,7 @@ figcaption span {
   margin-left: calc((100% - 600px) / 2);
 }
 
-.container article {
+.container > div {
   max-width: 600px;
 }
 
@@ -194,6 +195,7 @@ aside {
   width: 100%;
   position: relative;
   top: 1000px;
+  z-index: 10;
 }
 
 .aside-title {
@@ -316,6 +318,7 @@ aside {
   height: 0;
   padding-bottom: 56.25%;
   position: relative;
+  z-index: 10;
 }
 
 .video-container iframe {
