--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,20 @@ header {
   text-decoration: none;
 }
 
+.picks a {
+  display: flex;
+  position: absolute;
+  text-decoration: none;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.author a {
+  color: #000;
+  text-decoration: underline;
+  text-decoration-style: dotted;
+  font-weight: bold;
+}
+
 .left a:visited {
   color: black;
 }
@@ -84,7 +98,7 @@ figcaption {
 
 figcaption span {
   font-size: 13px;
-  color: #888888;
+  color: #888;
   letter-spacing: 0.13px;
 }
 
@@ -109,13 +123,6 @@ figcaption span {
 .author {
   color: #000;
   text-decoration: none;
-  font-weight: bold;
-}
-
-.author a {
-  color: #000;
-  text-decoration: underline;
-  text-decoration-style: dotted;
   font-weight: bold;
 }
 
@@ -158,15 +165,16 @@ figcaption span {
 .main-text {
   font-size: 20px;
   line-height: 30px;
-  color: #333333;
+  color: #333;
   margin-bottom: 20px;
 }
 
 .separation {
   width: 72px;
   border-bottom: 1px solid rgb(204, 204, 204);
-  margin: 0px auto 18px;
+  margin: 0px auto 18px auto;
 }
+
 ul {
   list-style: none;
   font-size: 15px;
@@ -174,6 +182,7 @@ ul {
   text-align: center;
   font-weight: bold;
 }
+
 .subscribe {
   display: block;
   width: 169px;
@@ -184,6 +193,7 @@ ul {
   text-decoration: none;
   font-weight: bold;
 }
+
 /* -------------------- Aside Section --------------- */
 
 aside {
@@ -208,13 +218,6 @@ aside {
   width: 100%;
   height: 75px;
   margin-bottom: 15px;
-}
-
-.picks a {
-  display: flex;
-  position: absolute;
-  text-decoration: none;
-  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 .picks a h3 {
@@ -250,7 +253,7 @@ aside {
 
 .second-main h1 {
   font-size: 20px;
-  font-family: georgia, times "new roman", times, serif;
+  font-family: georgia, "times new roman", times, serif;
 }
 
 .wrapper {
